--- a/lab_B/src/main/resources/templates/songDetails.html
+++ b/lab_B/src/main/resources/templates/songDetails.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Song Details</title>
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 <header>
@@ -16,6 +17,9 @@
   <ul>
     <li th:each="artist : ${song.getPerformers()}" th:text="${artist.getFirstName()} + ' ' + ${artist.getLastName()}" ></li>
   </ul>
+  <div>
+    <a href="/songs" class="back-button">Back</a>
+  </div>
 </section>
 
 </body>
