--- a/lab_B/src/main/resources/templates/listSongs.html
+++ b/lab_B/src/main/resources/templates/listSongs.html
@@ -2,6 +2,8 @@
 <head>
     <meta charset="utf-8">
     <title>Songs Homepage - Welcome to My Music Store</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style type="text/css">
         body {
             width: 800px;
@@ -13,20 +15,55 @@
 <header>
     <h1>Welcome to My Music Store</h1>
 </header>
-<main>
-    <h2>Choose a song:</h2>
-    <!-- Display radio buttons for each song,
-            the value should be the trackId
-            and the displayed text should be Title: <songTitle>, Genre:<genre>, Release Year: <releaseYear> -->
-    <form th:method="POST" th:action="@{/artist}">
-        <div th:each="song : ${songs}">
-            <input type="radio" name="songRadio" th:id="${song.getTrackId()}" th:value="${song.getTrackId()}">
-            <label th:for="${song.getTrackId()}" th:text="'Title: ' + ${song.getTitle()} + ', Genre: ' + ${song.getGenre()} + ', Release Year: ' + ${song.getReleaseYear()}"></label>
-            <br>
-        </div>
-        <br>
-        <input type='submit' value='Submit'>
-    </form>
-</main>
+<div>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Song Title</th>
+            <th scope="col">Track ID</th>
+            <th scope="col">Genre</th>
+            <th scope="col">Release Year</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="song : ${songs}" class="product">
+            <td th:text="${song.getTitle()}"></td>
+            <td th:text="${song.getTrackId()}"></td>
+            <td th:text="${song.getGenre()}"></td>
+            <td th:text="${song.getReleaseYear()}"></td>
+            <td class="text-right">
+                <th:block>
+                    <form th:action="@{'/songs/delete/{id}' (id=${song.getId()})}"
+                          th:method="DELETE">
+                        <button type="submit"
+                                class="btn btn-sm btn-danger delete-product">
+                            <i class="fa fa-trash">Delete</i>
+                        </button>
+                    </form>
+                </th:block>
+                <th:block>
+                    <a th:href="@{'/songs/edit-form/{id}' (id=${song.getId()})}"
+                       class="btn btn-sm btn-info edit-product">
+                        <i class="fa fa-trash">Edit</i>
+                    </a>
+                </th:block>
+                <th:block>
+                <a th:href="@{'/songs/song-details/{id}' (id=${song.getId()})}" class="btn btn-sm btn-info edit-product">
+                    <i class="fa fa-trash">Details</i>
+                </a>
+                </th:block>
+                <th:block>
+                    <a th:href="@{'/artists/artist-to-song?songId={id}' (id=${song.getId()})}" class="btn btn-sm btn-info edit-product">
+                        <i class="fa fa-trash">Add Artists</i>
+                    </a>
+                </th:block>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <a href="/songs/add-form" class="btn btn-block btn-dark add-product-btn">
+        Add new song
+    </a>
+</div>
 </body>
 </html>
