--- a/lab_B/src/main/resources/templates/listSongs.html
+++ b/lab_B/src/main/resources/templates/listSongs.html
@@ -16,6 +16,20 @@
     <h1>Welcome to My Music Store</h1>
 </header>
 <div>
+    <form th:method="GET" th:action="@{/songs}" class="mb-4">
+        <div class="form-group">
+            <h2>Filter by Album:</h2>
+            <select name="albumID" class="form-control">
+                <option value="">All Albums</option>
+                <option th:each="album : ${albums}" th:value="${album.id}" th:text="${album.name}"></option>
+            </select>
+        </div>
+        <div class="d-flex justify-content-between">
+            <button type="submit" class="btn btn-primary">Filter</button>
+            <a th:href="@{/songs}" class="btn btn-secondary">Reset</a>
+        </div>
+    </form>
+
     <table class="table table-striped">
         <thead>
         <tr>
@@ -48,15 +62,15 @@
                     </a>
                 </th:block>
                 <th:block>
-                <a th:href="@{'/songs/song-details/{id}' (id=${song.getId()})}" class="btn btn-sm btn-info edit-product">
-                    <i class="fa fa-trash">Details</i>
-                </a>
+                    <a th:href="@{'/songs/song-details/{id}' (id=${song.getId()})}" class="btn btn-sm btn-info edit-product">
+                        <i class="fa fa-trash">Details</i>
+                    </a>
                 </th:block>
-                <th:block>
+                <!--<th:block>
                     <a th:href="@{'/artists/artist-to-song?songId={id}' (id=${song.getId()})}" class="btn btn-sm btn-info edit-product">
                         <i class="fa fa-trash">Add Artists</i>
                     </a>
-                </th:block>
+                </th:block>-->
             </td>
         </tr>
         </tbody>
