--- a/lab_B/src/main/resources/templates/songDetails.html
+++ b/lab_B/src/main/resources/templates/songDetails.html
@@ -8,15 +8,15 @@
 </head>
 <body>
 <header>
-  <h1 th:text="${song.getTitle()}">Song title</h1>
+  <h1 th:text="${song.title}">Song title</h1>
 </header>
 <section>
-  <h2 th:text="${song.getGenre()}">Genre</h2>
-  <h2 th:text="${song.getReleaseYear()}">Year</h2>
-  <h2>Performers:</h2>
-  <ul>
-    <li th:each="artist : ${song.getPerformers()}" th:text="${artist.getFirstName()} + ' ' + ${artist.getLastName()}" ></li>
-  </ul>
+  <h2 th:text="${song.genre}">Genre</h2>
+  <h2 th:text="${song.releaseYear}">Year</h2>
+  <!-- <h2>Performers:</h2>
+   <ul>
+     <li th:each="artist : ${song.getPerformers()}" th:text="${artist.getFirstName()} + ' ' + ${artist.getLastName()}" ></li>
+  </ul> -->
   <div>
     <a href="/songs" class="back-button">Back</a>
   </div>
