--- a/lab_B/src/main/resources/templates/listSongs.html
+++ b/lab_B/src/main/resources/templates/listSongs.html
@@ -14,6 +14,19 @@
 <body>
 <header>
     <h1>Welcome to My Music Store</h1>
+    <span sec:authorize="isAnonymous()">
+        <a href="/login"
+           class="btn btn-primary">
+            <i class="fa fa-trash">Login</i>
+        </a>
+    </span>
+    <span sec:authorize="isAuthenticated()">
+        <a href="/logout"
+           class="btn btn-primary">
+            <i class="fa fa-trash">Logout</i>
+        </a>
+    </span>
+
 </header>
 <div>
     <form th:method="GET" th:action="@{/songs}" class="mb-4">
@@ -46,7 +59,7 @@
             <td th:text="${song.getGenre()}"></td>
             <td th:text="${song.getReleaseYear()}"></td>
             <td class="text-right">
-                <th:block>
+                <th:block sec:authorize="hasRole('ADMIN')">
                     <form th:action="@{'/songs/delete/{id}' (id=${song.getId()})}"
                           th:method="DELETE">
                         <button type="submit"
@@ -55,7 +68,7 @@
                         </button>
                     </form>
                 </th:block>
-                <th:block>
+                <th:block sec:authorize="hasRole('ADMIN')">
                     <a th:href="@{'/songs/edit-form/{id}' (id=${song.getId()})}"
                        class="btn btn-sm btn-info edit-product">
                         <i class="fa fa-trash">Edit</i>
@@ -75,9 +88,11 @@
         </tr>
         </tbody>
     </table>
+    <th:block sec:authorize="hasRole('ADMIN')">
     <a href="/songs/add-form" class="btn btn-block btn-dark add-product-btn">
         Add new song
     </a>
+    </th:block>
 </div>
 </body>
 </html>
